--- a/REST-API-CSharp-Applications.csproj
+++ b/REST-API-CSharp-Applications.csproj
@@ -48,7 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\ArthikaHFT.cs" />
-    <Compile Include="src\Example.cs" />
+    <Compile Include="src\Example11.cs" />
+    <Compile Include="src\Example10.cs" />
+    <Compile Include="src\Example9.cs" />
+    <Compile Include="src\Example8.cs" />
+    <Compile Include="src\Example7.cs" />
+    <Compile Include="src\Example6.cs" />
+    <Compile Include="src\Example5.cs" />
+    <Compile Include="src\Example4.cs" />
+    <Compile Include="src\Example3.cs" />
+    <Compile Include="src\Examples.cs" />
     <Compile Include="src\Example1.cs" />
     <Compile Include="src\Example0.cs" />
     <Compile Include="src\Example2.cs" />
